--- a/contact.html
+++ b/contact.html
@@ -21,9 +21,12 @@
 
 <div class = "info">
    <h2>Contact Info</h2>
-   <p>asdfkas;djfa;sjdfkjas;dkjf<br>
-   asdfasdfasdfasdfasdfasdfasasdf<br>
-   asdfasdfasdfasdffddddds<br></p>
+   <ul>
+	   <li>Email:</li>
+	   <li>compandtech@cameron.edu</li>
+	   <li>Phone:</li>
+	   <li>(580)581-2335</li>
+   </ul>
 </div>
 
 <div class = "submission">
