--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+<link rel="stylesheet" href="webpage.css">
 <title>Contact Us</title>
 
 <header>
@@ -9,11 +10,13 @@
 
 </head>
 <body>
-<ul>
+<div class="topnav">
+      <ul>
 	<li><a>Contact Us</a></li>
 	<li><a>Browse All</a><li>
 	<li><a>Home</a></li>
-</ul>
+      </ul>
+</div>
 
 <div class = "pagebanner">
    <h1>Contact Us</h1>
