--- a/contact.html
+++ b/contact.html
@@ -11,11 +11,9 @@
 </head>
 <body>
 <div class="topnav">
-      <ul>
-	<li><a>Contact Us</a></li>
-	<li><a>Browse All</a><li>
-	<li><a>Home</a></li>
-      </ul>
+    <a>Contact Us</a>
+    <a>Browse All</a>
+    <a>Home</a>
 </div>
 
 <div class = "pagebanner">
