--- a/searchresult.html
+++ b/searchresult.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+<link rel="stylesheet" href="webpage.css">
 <title>Search Results</title>
 
 <header>
@@ -9,11 +10,11 @@
 
 </head>
 <body>
-<ul>
-	<li><a>Contact Us</a></li>
-	<li><a>Browse All</a><li>
-	<li><a>Home</a></li>
-</ul>
+<div class="topnav">
+    <a>Contact Us</a>
+    <a>Browse All</a>
+    <a>Home</a>
+</div>
 
 <div class = "pagebanner">
    <h1>Results</h1>
