--- a/noresults.html
+++ b/noresults.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <link rel="stylesheet" href="webpage.css">
-<title>Single Search</title>
+<title>No Results</title>
 
 <header>
 <h1>Cameron University</h1>
