destinys page commits

--- a/Browse.html
+++ b/Browse.html
@@ -1,20 +1,22 @@
 <!DOCTYPE HTML>
 <head>
+    <link rel="stylesheet" href="style.css">
     <title>Browse Page</title>
 
 </head>
 
-<body>
+<body class="body">
 
     <div class ="topnav">
         <a href ="#Contact Us"> Contact Us</a>
         <a href ="#Browse"> Browse</a>
         <a href ="#Home"> Home</a>
-        <a href ="/"> <img src="CameronLogo_Pickaxe.png" width="75" >
+      
+
             </a>
     </div>
 
-    <h1>
+    <h1 class=" h1">
         Browse All
     </h1>
 
