--- a/AdvancedSearch.html
+++ b/AdvancedSearch.html
@@ -1,4 +1,5 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
+<html>
 <head>
     <link rel="stylesheet" href="style.css">
 <title>Advanced Search</title>
@@ -7,9 +8,9 @@
 
 <body class="body">
 <div class ="topnav">
-    <a href ="#Contact Us"> Contact Us</a>
-    <a href ="#Browse"> Browse</a>
-    <a href ="#Home"> Home</a>
+    <a href ="contact.html"> Contact Us</a>
+    <a href ="Browse.html"> Browse</a>
+    <a href ="index.html"> Home</a>
     
 </div>
 
@@ -147,4 +148,4 @@
 </table>
 </form>
 </body>
-</DOCTYPE>
+</html>
