--- a/Browse.html
+++ b/Browse.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 <head>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="webpage.css">
     <title>Browse Page</title>
 
 </head>
