--- a/Browse.html
+++ b/Browse.html
@@ -8,9 +8,9 @@
 <body class="body">
 
     <div class ="topnav">
-        <a href ="#Contact Us"> Contact Us</a>
-        <a href ="#Browse"> Browse</a>
-        <a href ="#Home"> Home</a>
+        <a href ="contact.html"> Contact Us</a>
+        <a href ="Browse.html"> Browse</a>
+        <a href ="index.html"> Home</a>
       
 
             </a>
