--- a/searchresult.html
+++ b/searchresult.html
@@ -11,9 +11,9 @@
 </head>
 <body>
 <div class="topnav">
-    <a>Contact Us</a>
-    <a>Browse All</a>
-    <a>Home</a>
+    <a href = "contact.html">Contact Us</a>
+    <a href = "Browse.html">Browse All</a>
+    <a href = "index.html">Home</a>
 </div>
 
 <div class = "pagebanner">
