--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     <a href = "Browse.html">Browse</a>
     <a href = "contact.html">Contact</a>
     <a href = "noresults.html">No Results</a>
-    <a href = "webpages.css">Web Page</a>
+    <a href = "webpage.css">Web Page</a>
   </body>
 </html>
