--- a/Browse.html
+++ b/Browse.html
@@ -6,7 +6,10 @@
 </head>
 
 <body class="body">
-
+    <header>    
+    <h1>CU Veterans History Project</h1>
+    </header>
+    
     <div class ="topnav">
         <a href ="contact.html"> Contact Us</a>
         <a href ="Browse.html"> Browse</a>
