--- a/AdvancedSearch.html
+++ b/AdvancedSearch.html
@@ -6,7 +6,7 @@
 
 </head>
 
-<body class="body">
+<body>
 <header>
     <h1>CU Veterans History Project</h1>        
 </header>
@@ -18,9 +18,9 @@
     
 </div>
 
-<h1 class="h1">
+<h2>
     Advanced Keyword Search
-</h1>
+</h2>
 
 <form 
     
