--- a/contact.html
+++ b/contact.html
@@ -12,8 +12,10 @@
 <body>
 <div class="topnav">
     <a href = "contact.html">Contact Us</a>
-    <a href = "Browse.html">Browse All</a>
+    <a href = "Browse.html">Browse</a>
+	<a href = "AdvancedSearch.html">Search</a>
     <a href = "index.html">Home</a>
+	
 </div>
 
 <div class = "pagebanner">
