--- a/Browse.html
+++ b/Browse.html
@@ -13,6 +13,7 @@
     <div class ="topnav">
         <a href ="contact.html"> Contact Us</a>
         <a href ="Browse.html"> Browse</a>
+        <a href = "AdvancedSearch.html">Search</a>
         <a href ="index.html"> Home</a>
       
 
