--- a/AdvancedSearch.html
+++ b/AdvancedSearch.html
@@ -14,6 +14,7 @@
 <div class ="topnav">
     <a href ="contact.html"> Contact Us</a>
     <a href ="Browse.html"> Browse</a>
+	<a href = "AdvancedSearch.html">Search</a>
     <a href ="index.html"> Home</a>
     
 </div>
