--- a/index.html
+++ b/index.html
@@ -11,5 +11,7 @@
     <a href = "contact.html">Contact</a>
     <a href = "noresults.html">No Results</a>
     <a href = "webpage.css">Web Page</a>
+    <br><br>
+    <img href = "use_cases.png" />
   </body>
 </html>
