--- a/Browse.html
+++ b/Browse.html
@@ -3,6 +3,10 @@
     <link rel="stylesheet" href="webpage.css">
     <title>Browse Page</title>
 
+    <div class = "logo">
+       <a href="https://www.cameron.edu/"><img src="CameronLogo_Pickaxe.png" alt="Cameron University";></a>
+    </div>
+
 </head>
 
 <body class="body">
