--- a/AdvancedSearch.html
+++ b/AdvancedSearch.html
@@ -4,6 +4,10 @@
     <link rel="stylesheet" href="webpage.css">
 <title>Advanced Search</title>
 
+<div class = "logo">
+<a href="https://www.cameron.edu/"><img src="CameronLogo_Pickaxe.png" alt="Cameron University";></a>
+</div>
+
 </head>
 
 <body>
