update advanced search and browse

--- a/AboutPage.html
+++ b/AboutPage.html
@@ -15,6 +15,7 @@
 
 
 <div class ="topnav">
+	<a href="AboutPage.html">About</a>
     <a href ="contact.html"> Contact Us</a>
     <a href ="Browse.html"> Browse</a>
 	<a href = "AdvancedSearch.html">Search</a>
@@ -23,7 +24,7 @@
 </div>
 
 <p1>
-
+<br>
 The Veteran History Project for Cameron University takes the records and personal accounts of local
 veterans, and makes them accessible for all in the community. Within this 
 catalog you will be able to access articles, memoirs, diaries, photographs,
@@ -45,8 +46,8 @@ the Project.
 
 <br><br>
 <p1>
-This project was completed by the 2022 Computer Science Capstone class. 
-Team members include: Elijah Proctor, Daisy Cossio, Destiny Conley, Sammie Powell,
+This project was completed by the 2022 Computer Science and Information Technology Capstone classes. 
+CS Team members include: Elijah Proctor, Daisy Cossio, Destiny Conley, Sammie Powell,
 Paul Webb, and Goodness Agboola.
 </p1>
 
