Contact Us page almost complete
Just going to attempt to add a corner search bar

--- a/contact.html
+++ b/contact.html
@@ -24,13 +24,13 @@
      	</div>
 
         <h3>Submitting an Archive</h3>
-	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+	<p>Do you have an archive that highlights a U.S. Veteran? Anyone is welcome to submit a request to add a Veteran's Archive onto the Cameron University Veteran's Project Database. Just send an email with the subject "CU Veteran's Project Submission Request" to compandtech@cameron.edu detailing the information of your veteran, interviewer, any accompanying media, and other documentations. You may also click the email linked below under "Contact". If approved, the archive will be added onto the database.   </p>
      	
 	<div class = "info">
 	   <h3>Contact</h3>
            <ul>
-              <li>Email:compandtech@cameron.edu</li>
 	      <li>Phone: (580) 581-2335</li>
+              <li>Email:<a style="color:navy" href="mailto:compandtech@cameron.edu?subject=CU Veteran's Project Submission Request">compandtech@cameron.edu</li>
            </ul>
         </div>
 
