--- a/Browse.html
+++ b/Browse.html
@@ -1,4 +1,6 @@
 <!DOCTYPE HTML>
+<html>
+    <meta name ="viewport" content ="width = device-width, initial-scale=1.0">
 <head>
     <link rel="stylesheet" href="webpage.css">
     <title>Browse Page</title>
@@ -100,4 +102,5 @@
 
  
 </body>
+</html>
 </Doctype>
