--- a/index.html
+++ b/index.html
@@ -1,17 +1,77 @@
+
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Navigation</title>
-  </head>
+     <meta name = "viewport" content = "width = device-width, initial-scale=1.0">
+<head>
+     <link rel="stylesheet" href="webpage.css">
+     <title>HOME</title>
+     <div class = "logo">
+       <a href="https://www.cameron.edu/"><img src="CameronLogo_Pickaxe.png" alt="Cameron University";></a>
+     </div>
+     <h1>Cameron University <br>Veterans History Project</h1>
+</head>
+
+<body>
+     <div class="topnav">
+         <a href = "contact.html">CONTACT US</a>
+         <a href = "Browse.html">BROWSE</a>
+         <a href = "AdvancedSearch.html">SEARCH</a>
+         <a href = "index.html">HOME</a>
+     </div>
   
-  <body>
-    <h1>Navigation Page</h1>
-    <a href = "AdvancedSearch.html">Advanced Search</a>
-    <a href = "Browse.html">Browse</a>
-    <a href = "contact.html">Contact</a>
-    <a href = "noresults.html">No Results</a>
-    <a href = "webpage.css">Web Page</a>
-    <br><br>
-    <img href = "use_cases.png" />
-  </body>
+
+    <div class = "navbar-right">
+      <div id = "nav-search" class = "search">
+        <a href = "#" title = "Open Search Bar" class = "nav-search-link">
+          <img src = "search-icon.svg" alt = "Search Icon">
+          Search
+        </a>
+        <form action = "/search" method = "get" class = "nav-search-form form custom">
+          <label class = "is-sr-only" for search-box">Search</label>
+          <input id = "search-box" type = "search" name "q" placeholder = "Search..."aria-label = "Search Cameron.edu">
+          <button id = "nav-search-close" type "button" class = "search-close-button btn square black small">
+            X
+          </button>
+        </form>
+      </div>
+    </div>
+ 
+  
+  <div class = "bodytext"> 
+
+      <h3>WELCOME</h3>
+
+      <p>
+      The Cameron University Veterans History Project site has collected interviews from combat veterans living 
+      Southwest Oklahoma area. The site's purpose is to preserve, and make accessible, the personal accounts of
+      these veterans so that it is possible for future generations may hear directly from the veterans in order
+      to have a deeper understanding of the realities of war. 
+      <br><br>
+      </p>
+	    
+     <h3>Their Story</h3>
+
+     <p>
+      The site contains the audio interviews with the veterans about their combat 
+      experiences.
+	  <br><br>
+	  </p>
+	  <p>
+	  The site hopes to present to the general public, these profiles of these heroes 
+    concerning their accomplishments, struggles, and obstacles they've overcome in 
+    order to protect our democracy.
+	  <br><br>
+	  </p>
+    </div>
+  </div>
+
+
+
+  <div id="footer"> <span>Copyright © 2011 | All Rights Reserved  </span> 
+  <a href="https://www.loc.gov/legal/standard-disclaimer-for-external-links/">       
+  Copyright © 2011 | All Rights Reserved Edited By The Library Of Congress on 
+  October, 26, 2011</a>
+  </div>
+
+</body>
 </html>
