--- a/contact.html
+++ b/contact.html
@@ -1,45 +1,41 @@
 <!DOCTYPE html>
 <html>
+     <meta name = "viewport" content = "width = device-width, initial-scale=1.0">
 <head>
-<link rel="stylesheet" href="webpage.css">
-<title>Contact Us</title>
-
-<div class = "logo">
-<a href="https://www.cameron.edu/"><img src="CameronLogo_Pickaxe.png" alt="Cameron University";></a>
-</div>
-
-<header>
-<h1>CU Veterans History Project</h1>
-</header>
-
+     <link rel="stylesheet" href="webpage.css">
+     <title>Contact Us</title>
+     <div class = "logo">
+       <a href="https://www.cameron.edu/"><img src="CameronLogo_Pickaxe.png" alt="Cameron University";></a>
+     </div>
+     <h1>Cameron University <br>Veterans History Project</h1>
 </head>
+
 <body>
-<div class="topnav">
-    <a href = "contact.html">Contact Us</a>
-    <a href = "Browse.html">Browse</a>
-	<a href = "AdvancedSearch.html">Search</a>
-    <a href = "index.html">Home</a>
-	
-</div>
+     <div class="topnav">
+         <a href = "contact.html">CONTACT US</a>
+         <a href = "Browse.html">BROWSE</a>
+         <a href = "AdvancedSearch.html">SEARCH</a>
+         <a href = "index.html">HOME</a>
+     </div>
+    
+     <div class = "bodytext">
+	<div class = "pagebanner">
+           <h2>CONTACT US</h2>
+     	</div>
 
-<div class = "pagebanner">
-   <h2>Contact Us</h2>
-</div>
+        <h3>Submitting an Archive</h3>
+	<p>Do you have an archive that highlights a U.S. Veteran? Anyone is welcome to submit a request to add a Veteran's Archive onto the Cameron University Veteran's Project Database. Just send an email with the subject "CU Veteran's Project Submission Request" to compandtech@cameron.edu detailing the information of your veteran, interviewer, any accompanying media, and other documentations. You may also click the email linked below under "Contact". If approved, the archive will be added onto the database.   </p>
+     	
+	<div class = "info">
+	   <h3>Contact</h3>
+           <ul>
+	      <li>Phone: (580) 581-2335</li>
+              <li>Email:<a style="color:navy" href="mailto:compandtech@cameron.edu?subject=CU Veteran's Project Submission Request">compandtech@cameron.edu</li>
+           </ul>
+        </div>
 
-<div class = "info">
-   <h3>Contact Info</h3>
-   <ul>
-	   <li>Email:</li>
-	   <li>compandtech@cameron.edu</li>
-	   <li>Phone:</li>
-	   <li>(580)581-2335</li>
-   </ul>
-</div>
-
-<div class = "submission">
-   <h3>Submitting an archive</h3>
-	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-</div>
+     </div>
 
 </body>
 </html>
+
