--- a/Browse.html
+++ b/Browse.html
@@ -17,7 +17,7 @@
     </header>
     
     <div class ="topnav">
-        
+        <a href="AboutPage.html">About</a>
         <a href ="contact.html"> Contact Us</a>
         <a href ="Browse.html"> Browse</a>
         <a href = "AdvancedSearch.html">Search</a>
