--- a/contact.html
+++ b/contact.html
@@ -12,6 +12,7 @@
 
 <body>
      <div class="topnav">
+		 <a href="AboutPage.html">About</a>
          <a href = "contact.html">CONTACT US</a>
          <a href = "Browse.html">BROWSE</a>
          <a href = "AdvancedSearch.html">SEARCH</a>
