--- a/noresults.html
+++ b/noresults.html
@@ -15,6 +15,7 @@
 </head>
 <body>
 <div class="topnav">
+	<a href="AboutPage.html">About</a>
     <a href = "contact.html">Contact Us</a>
     <a href = "Browse.html">Browse All</a>
     <a href = "index.html">Home</a>
