--- a/AdvancedSearch.html
+++ b/AdvancedSearch.html
@@ -25,6 +25,7 @@ fieldset {
 </header>
     
 <div class ="topnav">
+	<a href="AboutPage.html">About</a>
     <a href ="contact.html"> Contact Us</a>
     <a href ="Browse.html"> Browse</a>
 	<a href = "AdvancedSearch.html">Search</a>
