--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
 <body>
      <div class="topnav">
+		<a href="AboutPage.html">About</a>
          <a href = "contact.html">CONTACT US</a>
          <a href = "Browse.html">BROWSE</a>
          <a href = "AdvancedSearch.html">SEARCH</a>
