--- a/AboutPage.html
+++ b/AboutPage.html
@@ -4,6 +4,11 @@
 	  <link rel="stylesheet" href="webpage.css">
 
 	<title> About Page </title>
+	
+	<div class = "logo">
+		<a href="https://www.cameron.edu/"><img src="CameronLogo_Pickaxe.png" alt="Cameron University";></a>
+	</div>
+
 </head>
 
 </body>
