--- a/AboutPage.html
+++ b/AboutPage.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	  <link rel="stylesheet" href="webpage.css">
-
+	<script src = "https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js" ></script>
 	<title> About Page </title>
 	
 	<div class = "logo">
