--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,7 @@
      <meta name = "viewport" content = "width = device-width, initial-scale=1.0">
 <head>
      <link rel="stylesheet" href="webpage.css">
+	<script src = "https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
      <title>Contact Us</title>
      <div class = "logo">
        <a href="https://www.cameron.edu/"><img src="CameronLogo_Pickaxe.png" alt="Cameron University";></a>
