--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>CU Veterans History Project Homepage</title>
     <link rel="icon" type="image/x-icon" href = "/home/students/sp035656/public_html/CapstonePractice/favicon.ico.png">
     <link rel="stylesheet" href="webpage.css">
+    <script src = "https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
 
 <body>
