--- a/noresults.html
+++ b/noresults.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <link rel="stylesheet" href="webpage.css">
+<script src = "https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <title>No Results</title>
 
 <div class = "logo">
