--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head>
         <link rel="stylesheet" href="webpage.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-        <title>Contact Us</title>
+        <title>Homepage</title>
         <div class="logo">
             <a href="https://www.cameron.edu/"><img src="CameronLogo_Pickaxe.png" alt="Cameron University" ;></a>
         </div>
