--- a/AdvancedSearch.html
+++ b/AdvancedSearch.html
@@ -1,39 +1,27 @@
 <!DOCTYPE html>
 <html>
     <meta name ="viewport" content ="width = device-width, initial-scale=1.0">
-<head>
-    <link rel="stylesheet" href="webpage.css">
-	<script src = "https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<title>Advanced Search</title>
+    <head>
+        <link rel="stylesheet" href="webpage.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <title>Browse Page</title>
 
-<div class = "logo">
-<a href="https://www.cameron.edu/"><img src="CameronLogo_Pickaxe.png" alt="Cameron University";></a>
-</div>
-
-<style>
-fieldset {
-    border: 5px solid #000;
-	width: 75%;
-	margin: auto;
-	
-}
-</style>
-</head>
+        <div class="logo">
+            <a href="https://www.cameron.edu/"><img src="CameronLogo_Pickaxe.png" alt="Cameron University" ;></a>
+        </div>
+        <h1>Cameron University <br>Veterans History Project</h1>
+    </head>
 
 <body>
-    <header>
-        <h1>CU Veterans History Project</h1>
-    </header>
-
     <div class="topnav">
-        <a href="AboutPage.html">About</a>
-        <a href="contact.html"> Contact Us</a>
-        <a href="Browse.html"> Browse</a>
-        <a href="AdvancedSearch.html">Search</a>
-        <a href="index.html"> Home</a>
-
+    <a href="AboutPage.html">ABOUT</a>
+    <a href="contact.html">CONTACT US</a>
+    <a href="Browse.html">BROWSE</a>
+    <a href="AdvancedSearch.html">SEARCH</a>
+    <a href="index.html">HOME</a>
     </div>
 
+    <div class ="bodytext">	
     <h2>
         <input onkeyup="search_animal()" type="text"
                name="search" placeholder="Search...">
@@ -44,9 +32,7 @@ fieldset {
     <button onclick="myFunction()">Advanced Search Options</button>
 
     <br><br>
-
-
-   
+	    
 
     <script>
         function myFunction() {
@@ -221,6 +207,7 @@ fieldset {
             </table>
         </fieldset>
     </form>
+</div>
 </div>
 </body>
 </html>
