--- a/AboutPage.html
+++ b/AboutPage.html
@@ -47,7 +47,7 @@ the Project.
 <p1>
 This project was completed by the 2022 Computer Science and Information Technology Capstone classes. 
 CS Team members include: Elijah Proctor, Daisy Cossio, Destiny Conley, Sammie Powell,
-Paul Webb, Goodness Agboola, Robert Nash, Luke McLennan, Matthew Fitch, Dillion Chisholm, Cody Bruehl, and Cody Sovo. .
+Paul Webb, Goodness Agboola, Robert Nash, Luke McLennan, Matthew Fitch, Dillion Chisolm, Cody Bruehl, and Cody Sovo. .
 </p1>
 
 </body>
