--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </div>
 
     <div class="bodytext">          
-            <h2> WELCOME</h2>
+            <h2> Welcome</h2>
             <a href="gallery.html" title="">Veterans Gallery</a>
             <a href="ExternalLinks.html" title="">External Links</a>
 
