--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
 
 <body>
      <div class="topnav">
-		 <a href="AboutPage.html">About</a>
+		 <a href="AboutPage.html">ABOUT</a>
          <a href = "contact.html">CONTACT US</a>
          <a href = "Browse.html">BROWSE</a>
          <a href = "AdvancedSearch.html">SEARCH</a>
@@ -22,7 +22,7 @@
     
      <div class = "bodytext">
 	<div class = "pagebanner">
-           <h2>CONTACT US</h2>
+           <h2>Contact Us</h2>
      	</div>
 
         <h3>Submitting an Archive</h3>
