more homepage changes

--- a/index.html
+++ b/index.html
@@ -27,17 +27,6 @@
 
         <br>
         <p>
-            The Veteran History Project for Cameron University takes the records and personal accounts of local
-veterans, and makes them accessible for all in the community. Within this 
-catalog you will be able to access articles, memoirs, diaries, photographs,
-and interview recordings. 
-            <br><br>
-        </p>
-
-        <h3>Their Story</h3>
-
-     
-        <p>
             The United States Congress created the Veterans History Project in 2000. The authorizing legislation 
 (Public Law 106-380), sponsored by Representatives Ron Kind, Amo Houghton, and Steny Hoyer in the U.S.
  House of Representatives and Senators Max Cleland and Chuck Hagel in the U.S. Senate, received unanimous
@@ -47,6 +36,15 @@ AARP is the founding corporate sponsor of the Veterans History Project.  In addi
 major funding for the Project, AARP also spread the word to its legion of volunteers and almost 37 million 
 members, encouraging them to get involved.  Numerous state chapters have also been involved in 
 the Project.
+            <br><br>
+        </p>
+
+        <h3>Their Story</h3>
+
+     
+        <p>
+            The Veteran History Project for Cameron University takes the records and personal accounts of local veterans, and makes them accessible for all in the community. Within this catalog you will be able to access articles, memoirs, diaries, photographs, and interview recordings.
+
             <br><br>
         </p>
     </div>
