Re-added Dillion's changes to the bar/button
Still needs a little work on the stylization, but I wanted to re-add what he had and make it work with what I did.

--- a/AdvancedSearch.html
+++ b/AdvancedSearch.html
@@ -39,8 +39,8 @@
 
 
         <input id="veteranName" type="text"
-               name="search" placeholder="Search...">
-        <button id="submitVeteranName">Submit</button>
+               name="search" class="searchbar" placeholder="Search...">
+        <button id="submitVeteranName" class="search-button">Submit</button>
         <br>
         <button onclick="myFunction()">Advanced Search</button>
     </div>
