--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@ the Project.
     </div>
     </div>
 
-    <div id="footer">
-        <span>Copyright © 2011 | All Rights Reserved  </span>
+    <div id="footer" class="bodytext">
+        
         <a href="https://www.loc.gov/legal/standard-disclaimer-for-external-links/">
             Copyright © 2011 | All Rights Reserved Edited By The Library Of Congress on
             October, 26, 2011
