--- a/search.html
+++ b/search.html
@@ -1,15 +1,32 @@
 <!DOCTYPE html>
 <html>
-
+    <meta name ="viewport" content ="width = device-width, initial-scale=1.0">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width">
-  <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
-  <title>replit</title>
-  <link href="style.css" rel="stylesheet" type="text/css" />
-  <script src = "http://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="webpage.css">
+	<script src = "https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src = "searchScript">
+<title>Advanced Search</title>
+
+<div class = "logo">
+<a href="https://www.cameron.edu/"><img src="CameronLogo_Pickaxe.png" alt="Cameron University";></a>
+</div>
+
+
 </head>
+
 <body>
+    <header>
+        <h1>Cameron University <br>Veterans History Project</h1>
+    </header>
+
+    <div class="topnav">
+        <a href="AboutPage.html">ABOUT</a>
+        <a href="contact.html"> CONTACT US</a>
+        <a href="Browse.html"> BROWSE</a>
+        <a href="AdvancedSearch.html">SEARCH</a>
+        <a href="index.html"> HOME</a>
+
+    </div>
   <h1>Search For Veteran By Name</h1>
   <p>
     <input autocomplete = "off" type = "text" id = "veteranName"></p>
