--- a/search.html
+++ b/search.html
@@ -4,7 +4,7 @@
 <head>
     <link rel="stylesheet" href="webpage.css">
 	<script src = "https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script src = "searchScript">
+  <script src = "searchScript.js">
 <title>Advanced Search</title>
 
 <div class = "logo">
