--- a/AboutPage.html
+++ b/AboutPage.html
@@ -16,7 +16,7 @@
         <a href="AboutPage.html">ABOUT</a>
         <a href="contact.html">CONTACT US</a>
         <a href="Browse.html">BROWSE</a>
-        <a href="AdvancedSearch.html">SEARCH</a>
+        <a href="search.html">SEARCH</a>
         <a href="index.html">HOME</a>
     </div>
 	
