--- a/index.html
+++ b/index.html
@@ -1,92 +1,61 @@
+
+
 <!DOCTYPE html>
 <html>
-
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>CU Veterans History Project Homepage</title>
-    <link rel="icon" type="image/x-icon" href = "/home/students/sp035656/public_html/CapstonePractice/favicon.ico.png">
-    <link rel="stylesheet" href="webpage.css">
-</head>
+    <meta name="viewport" content="width = device-width, initial-scale=1.0">
+    <head>
+        <link rel="stylesheet" href="webpage.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <title>Homepage</title>
+        <div class="logo">
+            <a href="https://www.cameron.edu/"><img src="CameronLogo_Pickaxe.png" alt="Cameron University" ;></a>
+        </div>
+        <h1>Cameron University <br>Veterans History Project</h1>
+    </head>
 
 <body>
- 
+    <div class="topnav">
+        <a href="AboutPage.html">ABOUT</a>
+        <a href="contact.html">CONTACT US</a>
+        <a href="Browse.html">BROWSE</a>
+        <a href="AdvancedSearch.html">SEARCH</a>
+        <a href="index.html">HOME</a>
+    </div>
 
+    <div class="bodytext">          
+            <h2> WELCOME</h2>
+            <a href="gallery.html" title="">Veterans Gallery</a>
+            <a href="ExternalLinks.html" title="">External Links</a>
 
-  <header>
-  <h1>CU Veterans History Project</h1>
-  </header> 
+        <br>
+        <p>
+            This site is about interviews concerning combat interview with veterans living
+            Southwest Oklahoma area.
+            <br><br>
+        </p>
 
-  <div class = "tapnav">
-      <a href = "contact.html">Contact Us</a>
-      <a href = "Browse.html">Browse</a>
-      <a href = "AdvancedSearch.html">Search</a>
-      <a href=  "gallery.html" title="">Veterans Gallery</a>
-      <a href=  "ExternalLinks.html" title="">External Links</a>
-      <input type = "text" placeholder = "Search..">
-  </div>
+        <h3>Their Story</h3>
 
-  <br><br><br>
+        <p>
+            The site contains the audio interviews with the veterans about their combat
+            experiences.
+            <br><br>
+        </p>
+        <p>
+            The site hopes to present to the general public, these profiles of these heroes
+            concerning their accomplishments, struggles, and obstacles they've overcome in
+            order to protect our democracy.
+            <br><br>
+        </p>
+    </div>
+    </div>
 
-  <div class = "nav-topbar">
-    <div class = "navbar-left">
-      <div class = "logo">
-        <a href = "https://www.cameron.edu/office-of-teaching-and-learning/library" title = "Cameron University Library Home Page">
-          <img src = "cu-logo.svg" alt="Cameron University Logo">
+    <div id="footer">
+        <span>Copyright © 2011 | All Rights Reserved  </span>
+        <a href="https://www.loc.gov/legal/standard-disclaimer-for-external-links/">
+            Copyright © 2011 | All Rights Reserved Edited By The Library Of Congress on
+            October, 26, 2011
         </a>
-      </div>
     </div>
-   </div>
-
-
-  <div id="content"> 
-
-    <div id="inside content"> <br>
-
-      <h3>Welcome to the Cameron University Library Combat Veterans Historical 
-      Site</h3>
-
-      <p>
-      This site is about interviews with Southwest Oklahoma Area veterans about their 
-      combat experiences in various theater of conflicts and wars. 
-      <br><br>
-      </p>
-     
-     <h3>Their Story</h3>
-
-     <p>
-      The audio interviews with the veterans about their combat 
-      experiences show how they defended our country by showcasing American 
-      values of bravery, duty, honesty, and integrity. The listener will gain a 
-      deeper understanding of the what, why, and how every veteran has 
-      sacrificed to successfully complete the missions given to them by 
-      every U.S. President, the Commander-In-Chief.
-     <br><br>
-     </p>
-     <p>
-      The site hopes to present to the general public these in-depth profiles of these heroes 
-      concerning their accomplishments, struggles, and obstacles they've overcome in 
-      order to protect our democracy.
-     <br><br>
-     </p>
-
-     <div class="gallery">
-         <a target="https://www.loc.gov/vets/" href="https://www.loc.gov/vets/">
-            <img src="vets-title.gif" alt="Veterans History Page GIF" width="1000" height="150">
-         </a>
-         <div class="desc">A HISTORICAL PROJECT BASED ON THE VETERANS HISTORY PROJECT FOR THE AMERICAN FOLKLIFE CENTER OF THE LIBRARY OF CONGRESS</div>
-     </div>
-
-     <br><br>
-    </div>
-  </div>
-
-  <div id="footer"> <span>Copyright © 2011 | All Rights Reserved  </span> 
-  <a href="https://www.loc.gov/legal/standard-disclaimer-for-external-links/">       
-  Copyright © 2011 | All Rights Reserved Edited By The Library Of Congress on 
-  October, 26, 2011</a>
-  </div>
-</div>
 </body>
 </html>
-
