--- a/contact.html
+++ b/contact.html
@@ -30,10 +30,13 @@
      	
 	<div class = "info">
 	   <h3>Contact</h3>
-           <ul>
-	      <li>Phone: (580) 581-2335</li>
-              <li>Email:<a style="color:navy" href="mailto:compandtech@cameron.edu?subject=CU Veteran's Project Submission Request">compandtech@cameron.edu</li>
-           </ul>
+           <form action="mail_handler.php" method="post">
+		First Name: <input type="text" name="first_name"><br>
+		Last Name: <input type="text" name="last_name"><br>
+		Email: <input type="text" name="email"><br>
+		Message:<br><textarea rows="5" name="message" cols="30"></textarea><br>
+		<input type="submit" name="submit" value="Submit">
+	   </form>
         </div>
 
      </div>
