--- a/AboutPage.html
+++ b/AboutPage.html
@@ -22,32 +22,11 @@
 	
     <div class="bodytext">
         <h2>About</h2>
-<p1>
 <br>
-The Veteran History Project for Cameron University takes the records and personal accounts of local
-veterans, and makes them accessible for all in the community. Within this 
-catalog you will be able to access articles, memoirs, diaries, photographs,
-and interview recordings. 
-</p1>
-
-<br><br>
-<p1>
-The United States Congress created the Veterans History Project in 2000. The authorizing legislation 
-(Public Law 106-380), sponsored by Representatives Ron Kind, Amo Houghton, and Steny Hoyer in the U.S.
- House of Representatives and Senators Max Cleland and Chuck Hagel in the U.S. Senate, received unanimous
- support and was signed into law by President William Jefferson Clinton on October 27, 2000.
-
-AARP is the founding corporate sponsor of the Veterans History Project.  In addition to providing initial
-major funding for the Project, AARP also spread the word to its legion of volunteers and almost 37 million 
-members, encouraging them to get involved.  Numerous state chapters have also been involved in 
-the Project.
-</p1>
-
-<br><br>
 <p1>
 This project was completed by the 2022 Computer Science and Information Technology Capstone classes. 
 CS Team members include: Elijah Proctor, Daisy Cossio, Destiny Conley, Sammie Powell,
-Paul Webb, Goodness Agboola, Robert Nash, Luke McLennan, Matthew Fitch, Dillion Chisolm, Cody Bruehl, and Cody Sovo. .
+Paul Webb, Goodness Agboola, Robert Nash, Luke McLennan, Matthew Fitch, Dillion Chisolm, Cody Bruehl, and Cody Sovo.
 </p1>
 
 </body>
