--- a/index.html
+++ b/index.html
@@ -48,12 +48,11 @@
     </div>
     </div>
 
-    <div id="footer">
-        <span>Copyright © 2011 | All Rights Reserved  </span>
+    <footer>
+        <span>Cameron University © 2022 | All Rights Reserved </span>
         <a href="https://www.loc.gov/legal/standard-disclaimer-for-external-links/">
-            Copyright © 2011 | All Rights Reserved Edited By The Library Of Congress on
-            October, 26, 2011
+            | The Library Of Congress
         </a>
-    </div>
+    </footer>
 </body>
 </html>
