--- a/AboutPage.html
+++ b/AboutPage.html
@@ -29,6 +29,12 @@ CS Team members include: Elijah Proctor, Daisy Cossio, Destiny Conley, Sammie Po
 Paul Webb, Goodness Agboola, Robert Nash, Luke McLennan, Matthew Fitch, Dillion Chisolm, Cody Bruehl, and Cody Sovo.
 </p1>
 
+    <footer>
+        <span>Cameron University © 2022 | All Rights Reserved </span>
+        <a href="https://www.loc.gov/legal/standard-disclaimer-for-external-links/">
+            | The Library Of Congress
+        </a>
+    </footer>    
 </body>
 
 </html>
