--- a/AdvancedSearch.html
+++ b/AdvancedSearch.html
@@ -230,5 +230,12 @@
     </div>
     <script src="script.js"></script>
 </div>
+
+    <footer>
+        <span>Cameron University © 2022 | All Rights Reserved </span>
+        <a href="https://www.loc.gov/legal/standard-disclaimer-for-external-links/">
+            | The Library Of Congress
+        </a>
+    </footer>
 </body>
 </html>
