--- a/Browse.html
+++ b/Browse.html
@@ -91,6 +91,12 @@
    <button>Reset</button>
 
     </div>
+        <footer>
+        <span>Cameron University © 2022 | All Rights Reserved </span>
+        <a href="https://www.loc.gov/legal/standard-disclaimer-for-external-links/">
+            | The Library Of Congress
+        </a>
+    </footer>
 </body>
 </html>
 </Doctype>
