--- a/contact.html
+++ b/contact.html
@@ -1,42 +1,69 @@
+<?php
+
+error_reporting(-1);
+ini_set('display_errors', 'On');
+set_error_handler("var_dump");
+
+if(isset($_POST['submit'])){
+    $from = $_POST['email']; // this is the sender's Email address
+    $first_name = $_POST['first_name'];
+    $last_name = $_POST['last_name'];
+    $subject = "Form submission";
+    $message = $first_name . " " . $last_name . " wrote the following:" . "\n\n" . $_POST['message'];
+
+    $headers = "From:" . $from;
+    mail(mf942945@cameron.edu,$subject,$message,$headers);
+    header('Location: contact.html');
+    // You can also use header('Location: thank_you.php'); to redirect to another page.
+    // You cannot use header and echo together. It's one or the other.
+    }
+?>
+
 <!DOCTYPE html>
 <html>
-     <meta name = "viewport" content = "width = device-width, initial-scale=1.0">
+<meta name="viewport" content="width = device-width, initial-scale=1.0">
 <head>
-     <link rel="stylesheet" href="webpage.css">
-	<script src = "https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-     <title>Contact Us</title>
-     <div class = "logo">
-       <a href="https://www.cameron.edu/"><img src="CameronLogo_Pickaxe.png" alt="Cameron University";></a>
-     </div>
-     <h1>Cameron University <br>Veterans History Project</h1>
+    <link rel="stylesheet" href="webpage.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <title>Contact Us</title>
+    <div class="logo">
+        <a href="https://www.cameron.edu/"><img src="CameronLogo_Pickaxe.png" alt="Cameron University" ;></a>
+    </div>
+    <h1>Cameron University <br>Veterans History Project</h1>
+
 </head>
 
 <body>
-     <div class="topnav">
-		 <a href="AboutPage.html">About</a>
-         <a href = "contact.html">CONTACT US</a>
-         <a href = "Browse.html">BROWSE</a>
-         <a href = "AdvancedSearch.html">SEARCH</a>
-         <a href = "index.html">HOME</a>
-     </div>
-    
-     <div class = "bodytext">
-	<div class = "pagebanner">
-           <h2>CONTACT US</h2>
-     	</div>
+    <div class="topnav">
+        <a href="AboutPage.html">ABOUT</a>
+        <a href="contact.html">CONTACT US</a>
+        <a href="Browse.html">BROWSE</a>
+        <a href="AdvancedSearch.html">SEARCH</a>
+        <a href="index.html">HOME</a>
+    </div>
 
-        <h3>Submitting an Archive</h3>
-	<p>Do you have an archive that highlights a U.S. Veteran? Anyone is welcome to submit a request to add a Veteran's Archive onto the Cameron University Veteran's Project Database. Just send an email with the subject "CU Veteran's Project Submission Request" to compandtech@cameron.edu detailing the information of your veteran, interviewer, any accompanying media, and other documentations. You may also click the email linked below under "Contact". If approved, the archive will be added onto the database.   </p>
-     	
-	<div class = "info">
-	   <h3>Contact</h3>
-           <ul>
-	      <li>Phone: (580) 581-2335</li>
-              <li>Email:<a style="color:navy" href="mailto:compandtech@cameron.edu?subject=CU Veteran's Project Submission Request">compandtech@cameron.edu</li>
-           </ul>
+    <div class="bodytext">
+        <div class="pagebanner">
+            <h2>Contact Us</h2>
         </div>
 
-     </div>
+        <h3>Submitting an Archive</h3>
+        <p>Do you have an archive that highlights a U.S. Veteran? Anyone is welcome to submit a request to add a Veteran's Archive onto the Cameron University Veteran's Project Database. Just send an email with the subject "CU Veteran's Project Submission Request" to compandtech@cameron.edu detailing the information of your veteran, interviewer, any accompanying media, and other documentations. You may also click the email linked below under "Contact". If approved, the archive will be added onto the database.   </p>
+
+
+
+        <div class="info">
+            <h3>Contact</h3>
+            <form action="" method="post">
+                First Name: <input type="text" name="first_name"><br>
+                Last Name: <input type="text" name="last_name"><br>
+                Email: <input type="text" name="email"><br>
+                Message:<br><textarea rows="5" name="message" cols="30"></textarea><br>
+                <input type="submit" name="submit" value="Submit">
+            </form>
+        </div>
+
+    </div>
 
 </body>
 </html>
