--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
     <meta name="viewport" content="width = device-width, initial-scale=1.0">
@@ -24,24 +25,20 @@
             <h2> WELCOME</h2>
             <a href="gallery.html" title="">Veterans Gallery</a>
             <a href="ExternalLinks.html" title="">External Links</a>
-
-        <br>
         <p>
-            This site is about interviews concerning combat interview with veterans living
-            Southwest Oklahoma area.
+            The United States Congress created the Veterans History Project in 2000.
+            The authorizing legislation (Public Law 106-380), sponsored by Representatives Ron Kind, 
+            Amo Houghton, and Steny Hoyer in the U.S. House of Representatives and Senators Max Cleland and Chuck Hagel in the U.S. 
+            Senate, received unanimous support and was signed into law by President William Jefferson Clinton on October 27, 2000. AARP is the founding corporate sponsor of the Veterans History Project. In addition to providing initial major funding for the Project, AARP also spread the word to its legion of volunteers and almost 37 million members, encouraging them to get involved. Numerous state chapters have also been involved in the Project.
             <br><br>
         </p>
 
         <h3>Their Story</h3>
 
         <p>
-            The site contains the audio interviews with the veterans about their combat
-            experiences.
-            <br><br>
-        </p>
-        <p>
-            The site hopes to present to the general public, these profiles of these heroes
-            concerning their accomplishments, struggles, and obstacles they've overcome in
+            The Veteran History Project for Cameron University takes the records and personal accounts of local veterans, and makes them accessible for all in the community. Within this catalog you will be able to access articles, memoirs, diaries, photographs, and interview recordings.
+            The site hopes to present to the general public, the profiles of these heroes
+            concerning their accomplishments, struggles, and obstacles they have overcome in
             order to protect our democracy.
             <br><br>
         </p>
