--- a/AboutPage.html
+++ b/AboutPage.html
@@ -22,19 +22,14 @@
 	
     <div class="bodytext">
         <h2>About</h2>
-<br>
-<p1>
-This project was completed by the 2022 Computer Science and Information Technology Capstone classes. 
-CS Team members include: Elijah Proctor, Daisy Cossio, Destiny Conley, Sammie Powell,
-Paul Webb, Goodness Agboola, Robert Nash, Luke McLennan, Matthew Fitch, Dillion Chisolm, Cody Bruehl, and Cody Sovo.
-</p1>
 
-    <footer>
-        <span>Cameron University © 2022 | All Rights Reserved </span>
-        <a href="https://www.loc.gov/legal/standard-disclaimer-for-external-links/">
-            | The Library Of Congress
-        </a>
-    </footer>    
+		<table id="TeamPhotos">
+			<tr>
+				<td><img src="C:\Users\pw943281\Downloads\team2-dev\team2-dev\team2\95apple.jpeg" alt="Paul Webb";></td>
+			</tr>
+		</table>
+	</div>
+
 </body>
 
 </html>
