--- a/individualPage.html
+++ b/individualPage.html
@@ -1,28 +1,30 @@
 <!DOCTYPE html>
 <html>
+<meta name = "viewport" content = "width = device-width, initial-scale=1.0">
 <head>
     <link rel="stylesheet" href="webpage.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <title>No Results</title>
+    <title>Individual Page</title>
 
     <div class="logo">
         <a href="https://www.cameron.edu/"><img src="CameronLogo_Pickaxe.png" alt="Cameron University" ;></a>
     </div>
 
-    <header>
-        <h1>CU Veterans History Project</h1>
-    </header>
+    
+        <h1>Cameron University <br>Veterans History Project</h1>
+    
 
 </head>
 <body>
     <div class="topnav">
-        <a href="AboutPage.html">About</a>
-        <a href="contact.html">Contact Us</a>
-        <a href="Browse.html">Browse All</a>
-        <a href="index.html">Home</a>
+        <a href="AboutPage.html">ABOUT</a>
+        <a href="contact.html">CONTACT US</a>
+        <a href="Browse.html">BROWSE</a>
+		<a href="AdvancedSearch.html">SEARCH</a>
+        <a href="index.html">HOME</a>
     </div>
-   
-        <h1>Individual's Page</h1>
+   <div class="bodytext">
+        <h2>Individual's Page</h2>
         <div class="indiv">
             <img src="https://louisville.edu/kent/images-folder/doctoral-student-directory/blank-profile/image_preview"></img>
             <div class="nonimg">
@@ -31,5 +33,6 @@
                 <div class="transcript">This is where the transcript goes.</div>
             </div>
         </div>
+		</div>
     </body>
 </html>
