Keeping a backup of current advanced search
Current as in pre-April 6th

--- a/AdvancedSearch.html
+++ b/AdvancedSearch.html
@@ -39,8 +39,8 @@
 
 
         <input id="veteranName" type="text"
-               name="search" placeholder="Search...">
-        <button id="submitVeteranName">Submit</button>
+               name="search" class="searchbar" placeholder="Search...">
+        <button id="submitVeteranName" class="search-button">Submit</button>
         <br>
         <button onclick="myFunction()">Advanced Search</button>
     </div>
@@ -81,9 +81,7 @@
                 <!--<table>
                     <tr>
                         <th colspan="2"> Advanced Search</th>
-
                     </tr>
-
                     <tr>
                         <td colspan="2" width="20%">
                             <label for="AdvSearch"></label>
@@ -97,26 +95,20 @@
                                 <option value="Two">Document</option>
                                 <option value="Three">Transcript</option>
                             </select>
-
-
                         </td>
-
                     </tr>
-
                     <tr>
                         <td>
                             <label for=""></label>
                             <select name="AND" id="And">
                                 <option value="One"> AND</option>
                                 <option value="Two">OR</option>
-
                             </select>
                         </td>
                         <td>
                             <label for="AdvSearch2"></label>
                             <input type="search" id="SecondField" name="AdvSearch2" placeholder="Enter keyword(s)">
                         </td>
-
                         <td>
                             <label for="">In:</label>
                             <select name="AND" id="And">
@@ -124,13 +116,9 @@
                                 <option value="One">Name</option>
                                 <option value="Two">Document</option>
                                 <option value="Three">Transcript</option>
-
                             </select>
                         </td>
-
                     </tr>
-
-
                 </table>-->
 
                 <table>
@@ -242,6 +230,12 @@
     </div>
     <script src="script.js"></script>
 </div>
+
+    <footer>
+        <span>Cameron University © 2022 | All Rights Reserved </span>
+        <a href="https://www.loc.gov/legal/standard-disclaimer-for-external-links/">
+            | The Library Of Congress
+        </a>
+    </footer>
 </body>
 </html>
-
